Compiler/tests/good/context1.nx
val x : int = 3;

printn(x);
