Compiler/tests/bad/parser2.nx
function x : int = 3;